@@ -53,6 +53,60 @@
 /****************************************************************************
  * Pre-processor Definitions
  ****************************************************************************/
+/* DNS classes */
+
+#define DNS_CLASS_IN                1 /* RFC 1035 Internet */
+#define DNS_CLASS CH                3 /* N/A      Chaos */
+#define DNS_CLASS_HS                4 /* N/A      Hesiod */
+#define DNS_CLASS_QNONE           254 /* RFC 2136 QCLASS NONE */
+#define DNS_CLASS_QANY            255 /* RFC 1035 QCLASS ANY */
+
+/* DNS resource record types */
+
+#define DNS_RECTYPE_A                1 /* RFC 1035 IPv4 ddress record */
+#define DNS_RECTYPE_AAAA            28 /* RFC 3596 IPv6 address record */
+#define DNS_RECTYPE_AFSDB           18 /* RFC 1183 AFS database record */
+#define DNS_RECTYPE_APL             42 /* RFC 3123 Address Prefix List */
+#define DNS_RECTYPE_CAA            257 /* RFC 6844 Certification Authority Authorization */
+#define DNS_RECTYPE_CDNSKEY         60 /* RFC 7344 Child DNSKEY */
+#define DNS_RECTYPE_CDS             59 /* RFC 7344 Child DS */
+#define DNS_RECTYPE_CERT            37 /* RFC 4398 Certificate record */
+#define DNS_RECTYPE_CNAME            5 /* RFC 1035 Canonical name record */
+#define DNS_RECTYPE_DHCID           49 /* RFC 4701 DHCP identifier */
+#define DNS_RECTYPE_DLV          32769 /* RFC 4431 DNSSEC Lookaside Validation record */
+#define DNS_RECTYPE_DNAME           39 /* RFC 2672 Delegation Name */
+#define DNS_RECTYPE_DNSKEY          48 /* RFC 4034 DNS Key record */
+#define DNS_RECTYPE_DS              43 /* RFC 4034 Delegation signer */
+#define DNS_RECTYPE_HIP             55 /* RFC 5205 Host Identity Protocol */
+#define DNS_RECTYPE_IPSECKEY        45 /* RFC 4025 IPsec Key */
+#define DNS_RECTYPE_KEY             25 /* RFC 2535 and RFC 2930 Key record */
+#define DNS_RECTYPE_KX              36 /* RFC 2230 Key eXchanger record */
+#define DNS_RECTYPE_LOC             29 /* RFC 1876 Location record */
+#define DNS_RECTYPE_MX              15 /* RFC 1035 Mail exchange record */
+#define DNS_RECTYPE_NAPTR           35 /* RFC 3403 Naming Authority Pointer */
+#define DNS_RECTYPE_NS               2 /* RFC 1035 Name server record */
+#define DNS_RECTYPE_NSEC            47 /* RFC 4034 Next-Secure record */
+#define DNS_RECTYPE_NSEC3           50 /* RFC 5155 NSEC record version 3 */
+#define DNS_RECTYPE_NSEC3PARAM      51 /* RFC 5155 NSEC3 parameters */
+#define DNS_RECTYPE_PTR             12 /* RFC 1035 Pointer record */
+#define DNS_RECTYPE_RRSIG           46 /* RFC 4034 DNSSEC signature */
+#define DNS_RECTYPE_RP              17 /* RFC 1183 Responsible person */
+#define DNS_RECTYPE_SIG             24 /* RFC 2535 Signature */
+#define DNS_RECTYPE_SOA              6 /* RFC 1035 and RFC 2308 Start of [a zone of] authority record */
+#define DNS_RECTYPE_SRV             33 /* RFC 2782 Service locator */
+#define DNS_RECTYPE_SSHFP           44 /* RFC 4255 SSH Public Key Fingerprint */
+#define DNS_RECTYPE_TA           32768 /* N/A DNSSEC Trust Authorities */
+#define DNS_RECTYPE_TKEY           249 /* RFC 2930 Secret key record */
+#define DNS_RECTYPE_TLSA            52 /* RFC 6698 TLSA certificate association */
+#define DNS_RECTYPE_TSIG           250 /* RFC 2845 Transaction Signature */
+#define DNS_RECTYPE_TXT             16 /* RFC 1035[1] Text record */
+
+#define DNS_RECTYPE_ALL            255 /* RFC 1035 All cached records */
+#define DNS_RECTYPE_AXFR           252 /* RFC 1035 Authoritative Zone Transfer */
+#define DNS_RECTYPE_IXFR           251 /* RFC 1996 Incremental Zone Transfer */
+#define DNS_RECTYPE_OPT             41 /* RFC 6891 Option  */
+
+/* Flag1 bit definitions */
 
 #define DNS_FLAG1_RESPONSE        0x80
 #define DNS_FLAG1_OPCODE_STATUS   0x10
@@ -61,6 +115,9 @@
 #define DNS_FLAG1_AUTHORATIVE     0x04
 #define DNS_FLAG1_TRUNC           0x02
 #define DNS_FLAG1_RD              0x01
+
+/* Flag2 bit definitions */
+
 #define DNS_FLAG2_RA              0x80
 #define DNS_FLAG2_ERR_MASK        0x0f
 #define DNS_FLAG2_ERR_NONE        0x00
@@ -87,19 +144,20 @@ struct dns_header_s
 
 struct dns_answer_s
 {
-  /* DNS answer record starts with either a domain name or a pointer
-   * to a name already present somewhere in the packet.
-   */
-
   uint16_t type;
   uint16_t class;
   uint16_t ttl[2];
   uint16_t len;
-#if 0 /* REVISIT: Not yet support for IPv6 */
-  struct in6_addr ipaddr;
-#else
-  struct in_addr ipaddr;
+
+  union
+  {
+#ifdef CONFIG_NET_IPv4
+    struct in_addr ipv4;
 #endif
+#ifdef CONFIG_NET_IPv6
+    struct in6_addr ipv6;
+#endif
+  } u;
 };
 
 /****************************************************************************
